--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 
   
 </div>
+<div style="display: flex; justify-content: center; align-content: center;"><div class="font-bold">Hemanth Kumar</div></div>
 <script src="https://unpkg.com/alpinejs" defer></script>
 </body>
 </html>
